# HR_Helper

./: .gitignore  Dockerfile  README.md  pyproject.toml
backend/: main.py
backend/agents/: resume_agent.py
backend/core/: config.py  deps.py
backend/routes/: resume.py
backend/utils/: experience_calculator.py  matchers.py  parsers.py  suitability.py  text_extraction.py
