[project]
name = "hr-cv-analysis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.128.0",
    "langchain-community>=0.4.1",
    "loguru>=0.7.3",
    "pydantic-settings>=2.12.0",
    "python-dotenv>=1.2.1",
    "paddle==1.2.1",
    "paddleocr==3.3.2",
    "paddlepaddle==3.2.2",
    "paddlex==3.3.12",
    "python-docx>=1.2.0",
    "pdfplumber>=0.11.9",
    "python-multipart>=0.0.21",
    "uvicorn>=0.40.0",
    "types-python-dateutil>=2.9.0.20251115",
]


[dependency-groups]
dev = [
    "black",
    "ruff",
    "mypy",
    "pytest",
    "pre-commit",
    "types-python-dateutil>=2.9.0.20251115",
]


[tool.ruff.lint]
per-file-ignores = { "backend/main.py" = ["E402"] }

[tool.mypy]
explicit_package_bases = true
mypy_path = ["."]
[[tool.mypy.overrides]]
module = [
    "paddleocr.*",
]
ignore_missing_imports = true
